Avoid overlap of conversion graph callout with bar labels

--- a/app/assets/stylesheets/conversion-graph.scss
+++ b/app/assets/stylesheets/conversion-graph.scss
@@ -72,7 +72,7 @@
     .callout {
       position:relative;
       width:100%;
-      margin-top:4px;
+      margin-top:12px;
 
       .date {
         float:right;
